just tweaked .popup class
fixed the vertical height so it adapts to changes in the setup menu otion

--- a/simpleLifter/integrate/resources/styles.css
+++ b/simpleLifter/integrate/resources/styles.css
@@ -71,6 +71,7 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
 }
 .popup{
 	position:fixed;
+	padding: 10px;
 	left:50%;
 	top:50%;
 	transform: translate(-50%,-50%);
@@ -83,7 +84,6 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30p
 }
 #menu {
 	width: 50%;
-	height: 75%;
 }
 #popupBox{
 	width: 40%;
